# os-lw

./: .gitignore  LICENSE  README.md  build.bat  main.py  pyproject.toml
gui/: main_window.py  tab_file_write.py  tab_help.py  tab_prod_cons.py
synchronization/: dekker_algorithm.py  mutex_manager.py
threads/: consumer.py  file_writer.py  producer.py
utils/: buffer.py  debug_controller.py  file_manager.py
